Customize the app

--- a/index.njk
+++ b/index.njk
@@ -1,14 +1,13 @@
 ---
-title: Title. Update me.
+title: Sarah Eisa's Digital Garden
 layout: layouts/home.njk
-description: Description. Update me.
+description: My Digital Garden where I plant my knowledge & bullshit.
 image: https://upload.wikimedia.org/wikipedia/en/a/a9/Example.jpg
 date: Last Modified
 ---
 
 <p>
-  This is a demo website based on 
-  <a href="https://www.industrialempathy.com/posts/eleventy-high-performance-blog/">eleventy-high-performance-blog</a>.
+  HELLO FRIEND
 </p>
 
 <div id="posts">
