--- a/_includes/postslist.njk
+++ b/_includes/postslist.njk
@@ -3,6 +3,19 @@
   <li>
     <a href="{{ post.url | url }}">{% if post.data.title %}{{ post.data.title }}{% else %}<code>{{ post.url }}</code>{% endif %}</a>
     <time  datetime="{{ post.date | htmlDateString }}">{{ post.date | readableDate }}</time>
+    {% for tag in post.data.tags%}
+      {% if tag != "posts" %}
+      <a href="/tags/{{ tag }}" style="margin-right: 5px;">
+        <em>
+          <small>
+            <mark>
+              {{ tag }}
+            </mark>
+          </small>
+        </em>
+      </a>  
+      {% endif %}
+    {% endfor %}
   </li>
 {% endfor %}
 </ul>
