customize the article footer

--- a/_includes/layouts/post.njk
+++ b/_includes/layouts/post.njk
@@ -18,11 +18,15 @@ templateClass: tmpl-post
 {% block article %}
 {{ content | safe }}
 
-<h1>🙏🙏🙏</h1>
+<h3>🎉💅✨</h3>
 <p>
-  Since you've made it this far, <a href="{{ shareUrl | safe }}" on-click="share">sharing</a> this article on your favorite social media network 
-  would be highly appreciated 💖! For feedback, please 
+  Oh Hi👋 You made it this far cool! 🙌
+  If you would love to share it somewhere <a href="{{ shareUrl | safe }}" on-click="share">here you GO.</a> 
+  Also, I would 💖 to hear your feedback, so feel free to 
   <a href="https://twitter.com/{{ metadata.author.twitterHandle }}" target="_blank" rel="noopener">ping me on Twitter.</a>
+  or tag me if you wish.
+  Bye for now.
+  Keep Learning! 🤞
 </p>
 
 <share-widget>
