--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -85,7 +85,10 @@
     </main>
 
     <footer>
-      <a href="/about/">{{ metadata.author.name }}</a>
+      <a href="/about/" >{{ metadata.author.name }}</a>
+      <a href="https://github.com/saraheisa">🐱‍👤</a>
+      <a href="https://www.linkedin.com/in/saraheisa">🤓</a>
+      <a href="mailto:sarah.ga.eisa@gmail.com">📧</a>
     </footer>
 
     <!-- Current page: {{ page.url | url }} -->
