--- a/index.njk
+++ b/index.njk
@@ -1,5 +1,5 @@
 ---
-title: Sarah Eisa's Digital Garden
+title: HELLO FRIEND
 layout: layouts/home.njk
 description: My Digital Garden where I plant my knowledge & bullshit.
 image: https://upload.wikimedia.org/wikipedia/en/a/a9/Example.jpg
@@ -7,7 +7,7 @@ date: Last Modified
 ---
 
 <p>
-  HELLO FRIEND
+  HELLO FRIEND!!!
 </p>
 
 <div id="posts">
