Feat: update footer

--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -48,6 +48,10 @@
     <script csp-hash>if (/Mac OS X/.test(navigator.userAgent))document.documentElement.classList.add('apple')
     </script>
     <!-- css is inserted by optimize-html custom plugin -->
+    <script
+    src="https://unpkg.com/mailgo@0.10.4/dist/mailgo.dark.min.js"
+    defer>
+    </script>
   </head>
   <body>
     <header>
@@ -88,7 +92,8 @@
       <a href="/about/" >{{ metadata.author.name }}</a>
       <a href="https://github.com/saraheisa">🐱‍</a>
       <a href="https://www.linkedin.com/in/saraheisa">🤓</a>
-      <a href="mailto:sarah.ga.eisa@gmail.com">📧</a>
+      <a href="https://codepen.io/falloutDev">🎨</a>
+      <a class="dark" href="mailto:sarah.ga.eisa@gmail.com">🧾</a>
     </footer>
 
     <!-- Current page: {{ page.url | url }} -->
