update intro in home page

--- a/index.njk
+++ b/index.njk
@@ -7,7 +7,7 @@ date: Last Modified
 ---
 
 <p>
-  Welcome to my Digital Garden
+  Welcome to my Digital Garden where I plant the seeds of my knowledge (That sounds cool!!!) 🌱
 </p>
 
 <div id="posts">
