update intro in index

--- a/index.njk
+++ b/index.njk
@@ -7,7 +7,9 @@ date: Last Modified
 ---
 
 <p>
-  Welcome to my Digital Garden where I plant the seeds of my knowledge (That sounds cool!!!) 🌱
+  If you ask me what I came into this life to do, I will tell you I came to live out loud  
+  <em><small style="color: yellow;">- Émile Zola</small></em> in the jungle 
+  <em><small style="color: yellow">- me</small></em>
 </p>
 
 <div id="posts">
